# Emulator

./: .gitignore  README.md
src/: CMakeLists.txt  CMakePresets.json  pch.h
src/Emulator/: CMakeLists.txt  Emulator.cpp  Emulator.h  misc.cpp
src/GUI/: CMakeLists.txt  ChildFrm.cpp  ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  GUI.APS  GUI.rc  GUI.vcxproj  GUI.vcxproj.filters  GUIDoc.cpp  GUIDoc.h  GUIView.cpp  GUIView.h  MainFrm.cpp  PropertiesWnd.cpp  Resource.h  ViewTree.cpp  ViewTree.h  gui.cpp  gui.h  gui.lpi  gui.lpr  gui.lps  gui.res  main.lfm  main.pas
src/GUI/lib/x86_64-win64/: gui.compiled  main.ppu
src/GUI/res/: GUI.rc2
