# ---------------------------------------------------------------------------
# File:   CMakeLists.txt
# Author: Jens Kallup - paule32
#
# This file is part of Emulator.
#
# (c) Copyright 2025 Jens Kallup - paule32
# all rights reserved.
#
# only for non-profit usage !!!
# ---------------------------------------------------------------------------
cmake_minimum_required (VERSION 3.20)
project ("Emulator")

set(CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD 20)

add_subdirectory ("Emulator")
